# snowcap

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
app-tests/: main.rs
samples/: filler.txt  simple.snow  stack.iced  test.iced
src/: attribute.rs  cache.rs  connector.rs  data.rs  dynamic_widget.rs  error.rs  lib.rs  message.rs  node.rs  node_manager.rs  parser.rs  router.rs  snowcap.pest  tree_util.rs  util.rs  watcher.rs  widget.rs
src/attribute/: hash.rs
src/conversion/: alignment.rs  column.rs  container.rs  data.rs  dynamic_widget.rs  element.rs  mod.rs  node.rs  row.rs  stack.rs  text.rs  theme.rs  widget.rs
src/data/: file_data.rs  file_provider.rs  provider.rs  url_provider.rs
src/event/: fsnotify.rs  mod.rs  provider.rs
src/message/: mod.rs  module.rs  widget.rs
src/module/: argument.rs  data.rs  dispatch.rs  error.rs  event.rs  handle.rs  manager.rs  message.rs  mod.rs  registry.rs  test.rs  tests.rs
src/module/file/: format.rs  mod.rs
src/module/http/: mod.rs
src/module/timing/: mod.rs
src/module/url/: mod.rs
src/parser/: attribute.pest  attribute.rs  color.pest  color.rs  error.rs  gradient.pest  gradient.rs  hash.rs  module.pest  module.rs  test.rs  tests.rs  value.pest  value.rs
src/parser/tests/: module.rs
src/tree/: compare.rs  diff.rs  hash.rs  iter.rs  mod.rs  node.rs  patch.rs
