[package]
name = "snowcap"
version = "0.1.3"
edition = "2021"
license = "MIT"
license-file = "LICENSE.txt"
description = "A simple markup language for iced"
homepage = "https://github.com/boondocklabs/snowcap"
repository = "https://github.com/boondocklabs/snowcap"
readme = "README.md"

[dependencies]
#iced = { git = "https://github.com/iced-rs/iced.git", version = "0.14.0-dev" }
iced = { version = "0.13.1", features = [
    "qr_code",
    "svg",
    "canvas",
    "advanced",
    "image",
    "markdown",
] }
notify = "6.1.1"
once_cell = "1.19.0"
pest = "2.7.13"
pest_derive = "2.7.13"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
